Config for rebar3

--- a/rebar.config
+++ b/rebar.config
@@ -40,6 +40,17 @@
 ]}.
 
 {plugins, [
-    rebar_gdb_plugin
+    pc
 ]}.
+
+{provider_hooks,
+ [
+  {pre,
+   [
+    {compile, {pc, compile}},
+    {clean, {pc, clean}}
+   ]
+  }
+ ]
+}.
 
